--- a/.github/workflows/update-tokens.yaml
+++ b/.github/workflows/update-tokens.yaml
@@ -24,7 +24,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: npm run build
