--- a/.github/workflows/update-tokens.yaml
+++ b/.github/workflows/update-tokens.yaml
@@ -18,6 +18,8 @@ jobs:
       # primeiro ele faz o checkout do repositório(basicamente fazer um git pull)
       - uses: actions/checkout@v3
 
+      - run: git remote prune origin
+
       # depois de fazer o checkout ele vai criar um arquivo de input o JSON
       - name: Create input JSON
         id: create-json
