--- a/.github/workflows/update-tokens.yaml
+++ b/.github/workflows/update-tokens.yaml
@@ -53,6 +53,7 @@ jobs:
       - name: Create PR
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.PAT }}
           commit-message: "style: Update design tokens"
           # o titulo da PR ele pega uma variável que vem dentro do corpo da
           # requisição chamada commitMessage caso ela exista se não ele bota
